syntax = "proto3";
package terraria_launcher.protos.services.tshock_gateway;
option csharp_namespace = "TerrariaLauncher.Protos.Services.TShockGateway";

service TShockGroupManagement {

}
